dark mode and color fixes

--- a/src/components/admin/sideBar/sideBar.css
+++ b/src/components/admin/sideBar/sideBar.css
@@ -48,7 +48,7 @@
 .notificationBodyContainer {
   position: relative;
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .logo {
