--- a/src/components/global/dropDown/dropDown.css
+++ b/src/components/global/dropDown/dropDown.css
@@ -68,6 +68,7 @@
   justify-items: center;
   cursor: pointer;
   font-size: 20px;
+  color: var(--tertiary-color);
 }
 
 .dropDownListOfItemsItem:hover {
@@ -77,4 +78,5 @@
 
 .dropDownListOfItemsText {
   margin: 0px;
+  color: inherit;
 }
